# demarkus-ts

./: .env.test  README.md  package-lock.json  package.json  tsconfig.json
__tests__/client/: client.test.ts  mock-transport.ts
__tests__/client/internal/: native-ffi-exec.test.ts  url-parsing.test.ts
__tests__/protocol/: protocol.test.ts
cli-tools/requests/: fetch.ts
src/client/: client-options.ts  client.ts
src/client/cache/: client-cache.ts
src/client/errors/: DemarkusInvalidUrlError.ts
src/client/internal/: native-ffi-exec.ts  url-parsing.ts
src/client/internal/native/: Cargo.toml
src/client/internal/native/src/: lib.rs
src/protocol/: protocol.ts  status-codes.ts  types.ts  verbs.ts
src/protocol/request/: consts.ts  header.ts  parser.ts  payload.ts  request.ts  serializer.ts
src/protocol/response/: parser.ts  response.ts  serializer.ts
src/transport/: types.ts
src/transport/quic/: quic-connection.ts  quic-transport.ts
