[package]
name = "native"
version = "0.1.0"
edition = "2024"

[dependencies]
quinn = "0.11"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "io-util"] }
rustls = { version = "0.23", default-features = false, features = ["ring"] }
webpki-roots = "0.26"

[lib]
crate-type = ["cdylib"]
